@@ -35,7 +35,7 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource(){
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of(frontendUrl));
+        config.setAllowedOrigins(Arrays.asList(frontendUrl.split(",")));
         config.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE", "OPTIONS"));
         config.setAllowedHeaders(Arrays.asList("Authorization","Content-Type","X-User-ID"));
         config.setAllowCredentials(true);
